Implement proper game setup flow with premium rank permissions
- Updated GameBrowserMenu to open GameSetupMenu for inactive games instead of directly adding players
- Implemented proper flow: inactive game -> map selection -> game mode selection -> team selection
- Removed individual rank permission checks, now uses premium game setup rank permission
- Added comprehensive game setup configuration with arena, mode, and team settings
- Enhanced GameSetupMenu to handle game creation and activation properly
- Integrated team system with game setup flow for solo/duos/trios modes